Correcci[on css

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
       <aside class="sidebar">
         <h3>Categorías</h3>
         <ul>
-          <li>Perfumes (13)</li>
-          <li>Ropa (21)</li>
-          <li>Accesorios (41)</li>
-          <li>Zapatos (10)</li>
+          <li>Banderas(1)</li>
+          <li>Benetton (1)</li>
+          <li>Giorgio Armani (1)</li>
+          <li>Perry Ellis (3)</li>
+          <li>Tommy Hilfiger (4)</li>
+          <li>Valentino (1)</li>
+          <li>Viktor & Rolf (1)</li>
         </ul>
       </aside>
 
@@ -45,47 +48,71 @@
           <button>Comprar</button>
         </div>
         <div class="product">
-          <img src="./assets/img/03-TOMM10456063809_M.jpg" alt="TOMMY HILFIGER" />
+          <img
+            src="./assets/img/03-TOMM10456063809_M.jpg"
+            alt="TOMMY HILFIGER"
+          />
           <h2>TOMMY HILFIGER</h2>
           <p>USD92.00</p>
           <button>Comprar</button>
         </div>
         <div class="product">
-            <img src="./assets/img/04-TOMM10422244609_M.jpg" alt="TOMMY HILFIGER" />
-            <h2>TOMMY HILFIGER</h2>
-            <p>USD92.00</p>
-            <button>Comprar</button>
-          </div>
-          <div class="product">
-            <img src="./assets/img/05-TOMM10422187009_M.jpg" alt="TOMMY HILFIGER" />
-            <h2>TOMMY HILFIGER</h2>
-            <p>USD92.00</p>
-            <button>Comprar</button>
-          </div>
-          <div class="product">
-            <img src="./assets/img/06-TOMM10422186309_M.jpg" alt="TOMMY HILFIGER" />
-            <h2>TOMMY HILFIGER</h2>
-            <p>USD79.00</p>
-            <button>Comprar</button>
-          </div>
-          <div class="product">
-            <img src="./assets/img/07-PERR10110127709_M.jpg" alt="PERRY ELLIS" />
-            <h2>PERRY ELLIS</h2>
-            <p>USD67.00</p>
-            <button>Comprar</button>
-          </div>
-          <div class="product">
-            <img src="./assets/img/08-PERRPE355209_M.jpg" alt="PERRY ELLIS" />
-            <h2>PERRY ELLIS</h2>
-            <p>USD67.00</p>
-            <button>Comprar</button>
-          </div>
-          <div class="product">
-            <img src="./assets/img/09-PERR1010127709_M.jpg" alt="PERRY ELLIS" />
-            <h2>PERRY ELLIS</h2>
-            <p>USD67.00</p>
-            <button>Comprar</button>
-          </div>
+          <img
+            src="./assets/img/04-TOMM10422244609_M.jpg"
+            alt="TOMMY HILFIGER"
+          />
+          <h2>TOMMY HILFIGER</h2>
+          <p>USD92.00</p>
+          <button>Comprar</button>
+        </div>
+        <div class="product">
+          <img
+            src="./assets/img/05-TOMM10422187009_M.jpg"
+            alt="TOMMY HILFIGER"
+          />
+          <h2>TOMMY HILFIGER</h2>
+          <p>USD92.00</p>
+          <button>Comprar</button>
+        </div>
+        <div class="product">
+          <img
+            src="./assets/img/06-TOMM10422186309_M.jpg"
+            alt="TOMMY HILFIGER"
+          />
+          <h2>TOMMY HILFIGER</h2>
+          <p>USD79.00</p>
+          <button>Comprar</button>
+        </div>
+        <div class="product">
+          <img src="./assets/img/07-PERR10110127709_M.jpg" alt="PERRY ELLIS" />
+          <h2>PERRY ELLIS</h2>
+          <p>USD67.00</p>
+          <button>Comprar</button>
+        </div>
+        <div class="product">
+          <img src="./assets/img/08-PERRPE355209_M.jpg" alt="PERRY ELLIS" />
+          <h2>PERRY ELLIS</h2>
+          <p>USD67.00</p>
+          <button>Comprar</button>
+        </div>
+        <div class="product">
+          <img src="./assets/img/09-PERR1010127709_M.jpg" alt="PERRY ELLIS" />
+          <h2>PERRY ELLIS</h2>
+          <p>USD67.00</p>
+          <button>Comprar</button>
+        </div>
+        <div class="product">
+          <img src="./assets/img/010-BENE6520191405_M.jpg" alt="BENETTON" />
+          <h2>BENETTON</h2>
+          <p>USD37.00</p>
+          <button>Comprar</button>
+        </div>
+        <div class="product">
+          <img src="./assets/img/011-ABAN6519834805_M.jpg" alt="BANDERAS" />
+          <h2>BANDERAS</h2>
+          <p>USD37.00</p>
+          <button>Comprar</button>
+        </div>
       </main>
     </div>
 
